--- a/application/components/schedule/schedule.html
+++ b/application/components/schedule/schedule.html
@@ -5,6 +5,7 @@
     <require from="../snack-bar/snack-bar"></require>
     <require from="../bar/bar"></require>
     <require from="../bar-size"></require>
+    <require from="../bar-touch"></require>
 
     <div class="schedule" class.bind="periodClass" ref="schedule">
         <div class="schedule-panel">
@@ -57,13 +58,6 @@
                 <i class="mdi mdi-chevron-right"></i>
             </button>
         </div>
-        <!--<div class="schedule__ctrl schedule__ctrl&#45;&#45;left schedule__ctrl&#45;&#45;bottom">-->
-            <!--<button class="mdl-button mdl-js-button mdl-button&#45;&#45;fab mdl-button&#45;&#45;mini-fab mdl-button&#45;&#45;white"-->
-                    <!--class.bind="delete ? 'mdl-button__selected&#45;&#45;red' : ''">-->
-                <!--<i class="mdi mdi-delete-sweep"-->
-                   <!--click.trigger="deleteTrigger()"></i>-->
-            <!--</button>-->
-        <!--</div>-->
         <div class="schedule__timeline" stick-top>
             <div class="schedule__container"
                  class.bind="animate && 'schedule__animation'"
@@ -117,6 +111,7 @@
                             <div class="schedule__layout_cell"
                                  repeat.for="level2 of level1.dateArray">
                                 <div class="bar bar--small"
+                                     class.bind="period === 'month' ? 'bar--wide' : ''"
                                      if.bind="period !== 'day' &&
                                               level1.time >= 0 &&
                                               getConflict(place.id, level2.date)"
@@ -142,25 +137,36 @@
                                  repeat.for="level2 of level1.dateArray">
 
                                 <div class="bar"
-                                     if.bind="inflated &&
-                                              period !== 'day' &&
-                                              getShift(employer.id, level2.date)"
-                                     click.trigger="openNewWorkShiftDialog(place, employer, level2.date, getShift(employer.id, level2.date))"
-                                     class.bind="(level1.time < 0 ?
-                                                  'bar--past schedule-color__past_' + employer.colorCode :
-                                                  'schedule-color__' + employer.colorCode) + ' ' +
-                                                 (period === 'month' ? 'bar--wide' : '')"></div>
-                                <div class="bar bar--add"
-                                     if.bind="inflated &&
-                                              period !== 'day' &&
-                                              level1.time >= 0 &&
-                                              !delete &&
-                                              !getShift(employer.id, level2.date)"
-                                     click.trigger="openNewWorkShiftDialog(place, employer, level2.date)"
-                                     class.bind="('schedule-color__fade_' + employer.colorCode) + ' ' +
-                                                 (period === 'month' ? 'bar--wide' : '')">
+                                     bar-touch.bind="{
+                                        level1:   level1,
+                                        level2:   level2,
+                                        place:    place,
+                                        employer: employer,
+                                        shift:    getShift(employer.id, level2.date),
+                                        context:  context
+                                     }">
                                     <i class="mdi mdi-plus"></i>
                                 </div>
+
+                                <!--<div class="bar"-->
+                                     <!--if.bind="inflated &&-->
+                                              <!--period !== 'day' &&-->
+                                              <!--getShift(employer.id, level2.date)"-->
+                                     <!--click.trigger="openWorkShiftDialog(place, employer, level2.date, getShift(employer.id, level2.date))"-->
+                                     <!--class.bind="(level1.time < 0 ?-->
+                                                  <!--'bar&#45;&#45;past schedule-color__past_' + employer.colorCode :-->
+                                                  <!--'schedule-color__' + employer.colorCode) + ' ' +-->
+                                                 <!--(period === 'month' ? 'bar&#45;&#45;wide' : '')"></div>-->
+                                <!--<div class="bar bar&#45;&#45;add"-->
+                                     <!--if.bind="inflated &&-->
+                                              <!--period !== 'day' &&-->
+                                              <!--level1.time >= 0 &&-->
+                                              <!--!getShift(employer.id, level2.date)"-->
+                                     <!--click.trigger="openWorkShiftDialog(place, employer, level2.date)"-->
+                                     <!--class.bind="('schedule-color__fade_' + employer.colorCode) + ' ' +-->
+                                                 <!--(period === 'month' ? 'bar&#45;&#45;wide' : '')">-->
+                                    <!--<i class="mdi mdi-plus"></i>-->
+                                <!--</div>-->
 
                             </div>
 
