--- a/scss/schedule-dialog.scss
+++ b/scss/schedule-dialog.scss
@@ -1,3 +1,4 @@
+@import "../node_modules/material-design-lite/src/variables";
 @import "../node_modules/material-design-lite/src/mixins";
 @import "variables";
 
